WIP. Ui changes, course name changed, data is now passed between shots

--- a/GolfingStats/GolfingStats/App.xaml
+++ b/GolfingStats/GolfingStats/App.xaml
@@ -5,17 +5,17 @@
 	<Application.Resources>
 
 		<!-- Application resource dictionary -->
-        <ResourceDictionary>
+        <!--<ResourceDictionary>
 
             <Style x:Key="baseLabelStyle" TargetType="Label">
                 <Setter Property="FontSize" Value="22" />
             </Style>
 
-            <!--<Style x:Key="infoLabelStyle" BasedOn="{StaticResource baseLabelStyle}" TargetType="Label">
+            <Style x:Key="infoLabelStyle" BasedOn="{StaticResource baseLabelStyle}" TargetType="Label">
                 <Setter Property="FontAttributes" Value="Bold" />
-            </Style>-->
+            </Style>
 
-        </ResourceDictionary>
+        </ResourceDictionary>-->
         
     </Application.Resources>
 </Application>
