--- a/GolfingStats/GolfingStats/Pages/ShotPages/PuttDetailsPage.xaml
+++ b/GolfingStats/GolfingStats/Pages/ShotPages/PuttDetailsPage.xaml
@@ -1,29 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:control="clr-namespace:GolfingStats.Controls"
              x:Class="GolfingStats.Pages.ShotPages.PuttDetailsPage">
     <ContentPage.Content>
-        <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="10">
+        <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+            <control:ShotModalNavBar Title="{Binding ShotNumber}"  />
             <ScrollView Orientation="Vertical" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                <StackLayout HorizontalOptions="StartAndExpand" VerticalOptions="StartAndExpand">
+                <StackLayout HorizontalOptions="StartAndExpand" VerticalOptions="StartAndExpand" Padding="10">
 
                     <!--All info before the player hits the shot-->
                     <!--==================================================================================================================-->
                     <!--Shared Shot controls-->
                     <!--=============================================================-->
-                    <!--ShotNumber-->
-                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
-                        <Label HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand" Text="ShotNumber:" />
-                        <Label HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" Text="{Binding ShotNumber}" />
-                    </StackLayout>
-
-
-                    <!--DistanceToHole-->
-                    <!--<StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
-                        <Label HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand" Text="Distance to hole:" />
-                        <Label HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" Text="{Binding DistanceToHole}" />
-                    </StackLayout>-->
-
                     <!--Club-->
                     <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
                         <Label HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand" Text="Club:" />
@@ -31,7 +20,8 @@
                     </StackLayout>
                     <!--=============================================================-->
 
-                    <Label HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand" Text="Details before shot is hit:" />
+                    <Label HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand" FontSize="Medium" TextColor="MediumSeaGreen" Text="Details before shot is hit:" />
+                    <BoxView BackgroundColor="LightGray" HeightRequest="1" Margin="40,-3,40,0" />
 
                     <Grid>
 
@@ -127,7 +117,8 @@
 
                     <!--All info after the player has hit the shots-->
                     <!--==================================================================================================================-->
-                    <Label HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand" Text="Details after shot was hit:" />
+                    <Label HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand" FontSize="Medium" TextColor="MediumSeaGreen" Text="Details after shot was hit:" />
+                    <BoxView BackgroundColor="LightGray" HeightRequest="1" Margin="40,-3,40,0" />
 
                     <Grid>
 
@@ -158,7 +149,7 @@
 
 
                         <!--GreenBreak-->
-                        <Label Grid.Row="1" Grid.Column="0" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Text="To what side does the green break" />
+                        <Label Grid.Row="1" Grid.Column="0" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Text="To what side did the green break" />
                         <Picker Grid.Row="1" Grid.Column="1" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" Title="Select Option" SelectedItem="{Binding GreenBreak}">
                             <Picker.ItemsSource>
                                 <x:Array Type="{x:Type x:String}">
@@ -233,7 +224,7 @@
             <!--Sav3 & Del3te Button-->
             <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="End" Orientation="Horizontal">
                 <Button x:Name="btnDeleteShot" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" IsVisible="False" BackgroundColor="Red" TextColor="White" BorderColor="DarkRed" Text="Delete" Clicked="DeleteShot" />
-                <Button HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" BackgroundColor="SkyBlue" TextColor="White" BorderColor="AliceBlue" Text="Save" Clicked="SaveShot" />
+                <Button HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" BackgroundColor="SkyBlue" TextColor="White" BorderColor="LightSeaGreen" Text="Save" Clicked="SaveShot" />
             </StackLayout>
 
         </StackLayout>
